# runtime-kmp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
config/detekt/: detekt.yml
cpp/llm/: deviceai_llm_engine.cpp  deviceai_llm_engine.h
cpp/speech/: deviceai_speech_engine.cpp
flutter/speech/: README.md
gradle/: libs.versions.toml
ios/speech/: README.md
kotlin/core/: build.gradle.kts
kotlin/llm/: build.gradle.kts
kotlin/llm/cmake/llm-jni-android/: CMakeLists.txt
kotlin/llm/cmake/llm-jni-desktop/: CMakeLists.txt
kotlin/llm/cmake/llm-wrapper-ios/: CMakeLists.txt
kotlin/llm/src/commonMain/cpp/: CMakeLists.txt  llm_jni.cpp  llm_jni.h
kotlin/llm/src/commonMain/kotlin/dev/deviceai/llm/: LlmBridge.kt  (+9 more)
kotlin/llm/src/iosMain/c_interop/: llm_ios.def
kotlin/llm/src/iosMain/c_interop/include/: llm_ios.h
kotlin/llm/src/iosMain/cpp/: llm_ios.cpp
kotlin/speech/: build.gradle.kts
kotlin/speech/cmake/speech-jni-desktop/: CMakeLists.txt
kotlin/speech/cmake/speech-wrapper-ios/: CMakeLists.txt
kotlin/speech/src/androidMain/kotlin/dev/deviceai/: SpeechBridge.android.kt
kotlin/speech/src/commonMain/cpp/: CMakeLists.txt  deviceai_speech_jni.h  deviceai_tts_jni.cpp  deviceai_whisper_jni.cpp  piper_jni.cpp  speech_jni.h  whisper_jni.cpp
kotlin/speech/src/commonMain/kotlin/dev/deviceai/: SpeechBridge.kt  SttConfig.kt  SttStream.kt  TranscriptionResult.kt  TtsConfig.kt  TtsStream.kt
kotlin/speech/src/iosMain/c_interop/: speech_ios.def
kotlin/speech/src/iosMain/c_interop/include/: speech_ios.h
kotlin/speech/src/iosMain/cpp/: deviceai_tts_ios.cpp  piper_ios.cpp  whisper_ios.cpp
kotlin/speech/src/iosMain/kotlin/dev/deviceai/: SpeechBridge.ios.kt  TranscriptionJsonParser.kt
kotlin/speech/src/jvmMain/kotlin/dev/deviceai/: SpeechBridge.jvm.kt
react-native/speech/: README.md
runtime-core/: build.gradle.kts
runtime-core/src/androidMain/kotlin/dev/deviceai/models/: FileUtils.android.kt  ModelStorage.android.kt
runtime-core/src/commonMain/kotlin/dev/deviceai/core/: CoreSDKLogger.kt  DeviceAIRuntime.kt
runtime-core/src/commonMain/kotlin/dev/deviceai/models/: MetadataStore.kt  ModelStorage.kt  RegistryConfig.kt  StoragePaths.kt  TimeUtils.kt
runtime-speech/: build.gradle.kts
runtime-speech/src/commonMain/cpp/: piper_jni.cpp  speech_jni.h  whisper_jni.cpp
runtime-speech/src/iosMain/c_interop/: speech_ios.def
runtime-speech/src/iosMain/kotlin/dev/deviceai/: SpeechBridge.ios.kt  TranscriptionJsonParser.kt
runtime-speech/src/iosX64Main/kotlin/dev/deviceai/: SpeechBridge.iosX64.kt
sample/composeApp/: build.gradle.kts
sample/composeApp/src/androidMain/: AndroidManifest.xml
sample/iosApp/iosApp/: Info.plist
sample/iosApp/iosApp.xcodeproj/: project.pbxproj
samples/composeApp/: build.gradle.kts
samples/composeApp/src/androidMain/: AndroidManifest.xml
samples/ios/Sources/App/: DeviceAILabsApp.swift
samples/ios/Sources/Features/Chat/: ChatClient.swift  ChatFeature.swift  ChatView.swift
samples/ios/Sources/Features/Main/: MainFeature.swift  MainView.swift
samples/ios/Sources/Features/Models/: ModelManagerFeature.swift  ModelsView.swift
samples/ios/Sources/Features/Speech/: SpeechClient.swift  SpeechFeature.swift  SpeechView.swift
samples/iosApp/iosApp/: Info.plist  iOSApp.swift
samples/iosApp/iosApp.xcodeproj/: project.pbxproj
samples/kmp/composeApp/: build.gradle.kts
samples/kmp/iosApp/iosApp/: Info.plist  iOSApp.swift
samples/kmp/iosApp/iosApp.xcodeproj/: project.pbxproj
swift/: Package.swift
swift/Binaries/: README.md
swift/Sources/DeviceAiCore/: DeviceAI.swift
swift/Sources/DeviceAiCore/Download/: DownloadProgress.swift  Downloading.swift  URLSessionDownloader.swift
swift/Sources/DeviceAiCore/Errors/: DeviceAIError.swift
swift/Sources/DeviceAiCore/Logger/: DeviceAILogger.swift
swift/Sources/DeviceAiCore/Models/: ModelInfo.swift  ModelManager.swift  ModelMetadataStore.swift
swift/Sources/DeviceAiCore/Storage/: FileSystemStorage.swift  ModelStorage.swift
swift/Sources/DeviceAiCore/Version/: SDKVersion.swift
swift/Sources/DeviceAiLlm/: DeviceAI+LLM.swift
swift/Sources/DeviceAiLlm/Config/: LlmGenConfig.swift  LlmInitConfig.swift
swift/Sources/DeviceAiLlm/Engine/: LlamaEngine.swift
swift/Sources/DeviceAiLlm/Models/: FinishReason.swift  LlmCatalog.swift  LlmMessage.swift  LlmModelInfo.swift  LlmResult.swift
swift/Sources/DeviceAiLlm/Protocols/: Generating.swift  Retrieving.swift
swift/Sources/DeviceAiLlm/RAG/: BM25Store.swift  RagAugmentor.swift  RagChunk.swift
swift/Sources/DeviceAiLlm/Registry/: LlmModelManager.swift
swift/Sources/DeviceAiLlm/Session/: ChatConfig.swift  ChatSession.swift  ChatTurn.swift
swift/Sources/DeviceAiStt/: DeviceAI+STT.swift  STTModule.swift
swift/Sources/DeviceAiStt/Config/: TranscriptionConfig.swift
swift/Sources/DeviceAiStt/Engine/: WhisperEngine.swift
swift/Sources/DeviceAiStt/Models/: TranscriptionResult.swift  WhisperCatalog.swift
swift/Sources/DeviceAiStt/Protocols/: Transcribing.swift
swift/Sources/DeviceAiStt/Registry/: SttModelManager.swift
swift/Sources/DeviceAiStt/Session/: SttSession.swift
swift/Sources/DeviceAiTts/: DeviceAI+TTS.swift  TTSModule.swift
swift/Sources/DeviceAiTts/Config/: SynthesisConfig.swift
swift/Sources/DeviceAiTts/Engine/: PiperEngine.swift
swift/Sources/DeviceAiTts/Models/: AudioSegment.swift  PiperCatalog.swift
swift/Sources/DeviceAiTts/Protocols/: Synthesizing.swift
swift/Sources/DeviceAiTts/Registry/: TtsModelManager.swift
swift/Sources/DeviceAiTts/Session/: TtsSession.swift
swift/Tests/DeviceAiCoreTests/: DeviceAIErrorTests.swift  DeviceAITests.swift  SDKVersionTests.swift
swift/Tests/DeviceAiLlmTests/: BM25StoreTests.swift  ChatSessionTests.swift
swift/Tests/DeviceAiSttTests/: SttSessionTests.swift
swift/Tests/DeviceAiTtsTests/: TtsSessionTests.swift
(+139 files in other folders)
